<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.leon.getit.ui.user_info.UserInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView15"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3"
            />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/default_portrait"
            app:layout_constraintBottom_toTopOf="@+id/guideline10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline10"
            />
        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/unknown"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/civ_user_avatar"
            app:layout_constraintStart_toStartOf="@+id/civ_user_avatar"
            app:layout_constraintTop_toBottomOf="@+id/civ_user_avatar"
            />
        <ImageView
            android:id="@+id/imageView17"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_user_name"
            app:srcCompat="@drawable/sex"
            />
        <ImageView
            android:id="@+id/imageView18"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView17"
            app:layout_constraintStart_toStartOf="@+id/imageView17"
            app:layout_constraintTop_toBottomOf="@+id/imageView17"
            app:srcCompat="@drawable/birthday"
            />
        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView18"
            app:layout_constraintStart_toStartOf="@+id/imageView18"
            app:layout_constraintTop_toBottomOf="@+id/imageView18"
            app:srcCompat="@drawable/zone"
            />
        <TextView
            android:id="@+id/txt_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView17"
            app:layout_constraintStart_toEndOf="@+id/imageView17"
            app:layout_constraintTop_toTopOf="@+id/imageView17"
            />
        <TextView
            android:id="@+id/txt_birth_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView18"
            app:layout_constraintStart_toEndOf="@+id/imageView18"
            app:layout_constraintTop_toTopOf="@+id/imageView18"
            />
        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/friend_circle"
            app:layout_constraintBottom_toBottomOf="@+id/imageView19"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="@+id/imageView19"
            />

        <ImageView
            android:id="@+id/img_sex_setting"
            android:layout_width="20dp"
            android:layout_height="25dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_sex"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_sex"
            app:srcCompat="@drawable/ic_arrow_right" />

        <ImageView
            android:id="@+id/img_birthday_setting"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_birth_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txt_birth_day"
            app:srcCompat="@drawable/ic_arrow_right" />

        <ImageView
            android:id="@+id/img_zone_setting"
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView18"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView18"
            app:srcCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:drawableLeft="@drawable/ic_signature"
            android:drawablePadding="5dp"
            android:gravity="center"
            android:text="@string/personal_signature"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="@+id/imageView19"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <EditText
            android:id="@+id/edt_signature"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            android:hint="@string/personal_signature_hint"
            android:textSize="14sp"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:maxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/common_btn"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txt_signature"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyle"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>